// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render the black color and execute the onclick function 1`] = `
<button
  class="styles__Wrapper-sc-11qq8g6-0 hNDJSY"
  color="black"
>
  See more
</button>
`;

exports[`<Button /> should render the gray color 1`] = `
<button
  class="styles__Wrapper-sc-11qq8g6-0 jDrFTe"
  color="gray"
>
  See more
</button>
`;

exports[`<Button /> should render the heading 1`] = `
<button
  class="styles__Wrapper-sc-11qq8g6-0 jDrFTe"
  color="gray"
>
  See more
</button>
`;
